# unifi-voucher-manager

.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release_docker.yaml
backend/: Cargo.toml
backend/src/: unifi_api.rs
frontend/src/: middleware.ts
frontend/src/app/kiosk/: page.tsx
frontend/src/app/print/: page.tsx  styles.css
frontend/src/app/welcome/: page.tsx
frontend/src/components/: Header.tsx  VoucherCard.tsx
frontend/src/components/modals/: SuccessModal.tsx  VoucherModal.tsx  WifiQrModal.tsx
frontend/src/components/tabs/: CustomCreateTab.tsx  QuickCreateTab.tsx  Tabs.tsx  VouchersTab.tsx
frontend/src/components/utils/: ThemeSwitcher.tsx  VoucherCode.tsx  WifiQr.tsx
frontend/src/contexts/: GlobalContext.tsx
frontend/src/utils/: api.ts  format.ts
